--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-        <div class="container-fluid"> <a href="#" class="navbar-brand"><img src="img/logo.png"></a>
+        <div class="container-fluid"> <a href="#" class="navbar-brand"><img src="logo.png"></a>
             <button class="navbar-toggler type" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span> 
             </button>
