--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <hr>
             <div class="row">
                 <div class="col-md-4">
-                    <a href="misha.docx">
+                    <a href="misha.pdf">
                         <img src="https://ak.picdn.net/shutterstock/videos/13339199/thumb/1.jpg" class="misha__img"
                             width="300" alt="1man"> </a>
                 </div>
@@ -65,20 +65,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <a href="misha.docx">
+                    <a href="misha.pdf">
                         <img src="img/paula.png" class="misha__img" width="300" alt="1man"> </a>
                 </div>
                 <div class="col-md-8">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 class="misha__title"><a href="css/paula.docx" style="color: #31587A">Paula Vanessa 32
+                            <h3 class="misha__title"><a href="css/paula.pdf" style="color: #31587A">Paula Vanessa 32
                                     years old, Honduras Mexico</a></h3>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
                             <p class="misha__des">
-                                <a href="css/paula.docx" style="color: #3B6A8C">
+                                <a href="css/paula.pdf" style="color: #3B6A8C">
                                     My name is Misha. I'm 71 years old. I was born, raised, and also<br>
                                     studied and worked in the city of Moscow.<br>
                                     Since childhood, I have liked cranes that lift massive loads<br>
